[package]
name = "tcp-snooper"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dapplion/tcp-snooper"
description = "Log to stdout all data streamed through TCP connections"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
futures = "0.3.25"
hex = "0.4.3"
